express cookie-session

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,6 +18,7 @@
       <p>Welcome to <%= title %>, the most popular HTML, CSS, and JS framework for developing responsive, mobile-first
         projects on the web.</p>
     </div>
+    <p>session view : <%= sessionView %></p>
     <p>This is some text.</p>
     <p>This is another text.</p>
   </div>
